tests/checker/diagnostics/0899_gadt_operator_on_wrong_branch_04.ml.infer.expected
File "0899_gadt_operator_on_wrong_branch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0899_gadt_operator_on_wrong_branch_04 is not a valid module name.

File "0899_gadt_operator_on_wrong_branch_04.ml", line 11, characters 21-22:
11 |     | WBool_delta -> x + 4
                          ^
Error: The value x has type a = bool but an expression was expected of type
         int
